# ugh-prompt-engine

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/briefs/: Q0-2-expected-output.md  Q0-3-snapshot-test.md  Q0-4-validate-against-truth.md  Q0-5-validation-doc.md  Q1-1-loudness-lufs.md  Q1-3-bpm-confidence.md  Q1-4-genre-baseline.md  _index.md
.claude/memory/: 2026-04-25.md  2026-04-27.md  2026-05-02.md  2026-05-03.md  _index.md
.github/workflows/: ci.yml
config/: acoustic_baseline.yaml  edm_baseline.yaml  pro_baseline.yaml  semantic_rules.yaml
config/domain_profiles/: music.yaml
docs/: ai_music_daw_vision.md  architecture.md  cli.md  code_semantic_ci_design.md  coverage.md  learned_models_policy.md  metrics.md  migration.md  roadmap.md  roadmap_goal1.md  semantic_ci_product_v1.md  validation.md
examples/expected_output/: README.md  hashes.txt
examples/expected_output/synth_01_slow_pad_c_major/: evaluation.json  rpe.json  svp.yaml
examples/expected_output/synth_02_minor_pulse_a_minor/: evaluation.json  rpe.json  svp.yaml
examples/expected_output/synth_03_mid_groove_g_major/: evaluation.json  rpe.json  svp.yaml
examples/expected_output/synth_04_waltz_fsharp_minor/: evaluation.json  rpe.json  svp.yaml
examples/expected_output/synth_05_fast_bright_d_major/: evaluation.json  rpe.json  svp.yaml
examples/real_audio_validation/: manifest.example.yaml
examples/sample_input/: ground_truth.yaml
examples/semantic_ci/: README.md
examples/semantic_ci/pass_perfect/: expected_output.json  expected_report.md  observed_rpe.json  target_svp.json
examples/semantic_ci/repair_budget_zero/: expected_output.json  expected_report.md  observed_rpe.json  target_svp.json
examples/semantic_ci/repair_degraded/: expected_output.json  expected_report.md  observed_rpe.json  target_svp.json
rpe/: __init__.py  analyzer.py  extractor.py
scripts/: compare_learned_against_truth.py  generate_synth_samples.py  measure_real_audio.py  regenerate_ci_fixtures.py  regenerate_expected.py  validate_against_truth.py  validate_stem_separation.py
src/svp_rpe/: __init__.py  cli.py
src/svp_rpe/batch/: __init__.py  discovery.py  report.py  runner.py
src/svp_rpe/config/: __init__.py  acoustic_baseline.yaml  edm_baseline.yaml  loud_pop_baseline.yaml  semantic_rules.yaml  svp_templates.yaml  synonym_map.yaml
src/svp_rpe/eval/: __init__.py  comparison.py  (+9 more)
svp/: __init__.py  decoder.py  encoder.py
tests/: conftest.py  test_audio_loader.py  test_basic_pitch_adapter.py  test_beat_this_adapter.py  test_bpm_confidence.py  test_chords.py  test_cli.py  test_compare_learned_against_truth.py  test_comparison.py  test_config.py  test_downbeats.py  test_dynamic_range.py  test_dynamics_summary.py  test_genre_baseline.py  test_imports.py  test_learned_annotations.py  test_loudness.py  test_measure_real_audio.py  test_melody.py  test_models.py  test_panns_adapter.py  test_rpe_extractor.py  test_scorer_rpe.py  test_semantic_ci.py  test_semantic_ci_report.py  test_semantic_ci_snapshot.py  test_semantic_layer.py  test_snapshot.py  test_snapshot_determinism.py  test_source_separator.py  test_stem_rpe.py  test_stem_validation.py  test_svp_domain_profile.py  test_svp_generator.py  test_synth_samples.py  test_time_signature.py  test_validate_stem_separation_script.py  test_validation_script.py
(+34 files in other folders)
