[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "svp-rpe"
version = "0.1.0"
description = "SVP (Semantic Vector Prompt) + RPE (Reverse Prompt Engineering) — UGHer ecosystem prompt infrastructure"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Yuu6798"}]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "librosa>=0.10",
    "soundfile>=0.12",
    "pydantic>=2.0",
    "typer>=0.9",
    "pyyaml>=6.0",
    "rich>=13.0",
    "pyloudnorm>=0.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1", "mir_eval>=0.7"]
separate = ["demucs>=4.0"]
# beat_this (CPJKU) — MIT-licensed beat/downbeat detection. dbn=False is
# enforced inside the adapter so madmom never enters the dependency tree.
# Version range is provisional; tighten after PyPI / py3.11+ compatibility
# verification (see docs/learned_models_policy.md).
beat = ["beat_this"]
# panns_inference (qiuqiangkong) — AudioSet 527-class tagging. PyPI
# distribution is "panns-inference"; import name is "panns_inference".
# Pretrained weights are downloaded lazily by upstream on first use and
# have their own provenance — do NOT widen this extra to bundle weights.
learned-tags = ["panns-inference"]

[project.scripts]
svprpe = "svp_rpe.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"svp_rpe.config" = ["*.yaml"]
"svp_rpe.config.domain_profiles" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"
